--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("normalize.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 * {
   font-family: 'Roboto', sans-serif;
