--- a/src/styles/HeaderComponent.css
+++ b/src/styles/HeaderComponent.css
@@ -1,4 +1,4 @@
-header {
+#header {
   background-color: #343A40;
   display: flex;
   flex-direction: column;
@@ -61,9 +61,11 @@ header {
 .account-dropdown-menu {
   display: none;
   background-color: #343A40;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border: 1px solid #60c7a2;
+  border-radius: 3px;
   color: #60c7a2;
-  margin-top: 5px;
+  margin-top: 0px;
   padding: 5px 2px 5px 2px;
   position: absolute;
 }
