--- a/src/styles/RegisterComponent.css
+++ b/src/styles/RegisterComponent.css
@@ -1,4 +1,4 @@
-.register-line {
+/* .register-line {
   display: flex;
   justify-content: center;
   background-color: lightgray;
@@ -61,14 +61,14 @@
   }
 }
 
-/* 
+
 button {
   width: 35vw;
   height: 10vh;
   color: white;
   background-color: green;
   padding: 20px;
-} */
+}
 
 @media only screen and(min-width:992px) {
   .button {
@@ -111,7 +111,7 @@ button:hover {
     background-color: grey;
     
 } */
-.register-home {
+/* .register-home {
   width: 100vw;
   min-height: 100vh;
 }
@@ -119,4 +119,52 @@ button:hover {
 .register-button {
   padding: 10px;
   margin-left: 3vw;
+} */
+
+.register-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+#register-header {
+  font-size: 20px;
+  margin-bottom: 50px;
+  margin-top: 30px;
+}
+
+#register-form {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.register-field {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.register-button {
+  align-self: center;
+  margin-top: 50px;
+  background-color: #60c7a2;
+  border: none;
+  border-radius: 2px;
+  color: white;
+  padding: 10px 15px 10px 15px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+
+.label-text {
+  font-weight: 1000;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+
+.register-error {
+  position: absolute;
+  top: 130px;
+  color: red;
+  width: 50%;
 }
