--- a/src/styles/RegisterComponent.css
+++ b/src/styles/RegisterComponent.css
@@ -130,7 +130,7 @@ button:hover {
 
 #register-header {
   font-size: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   margin-top: 30px;
 }
 
@@ -168,3 +168,5 @@ button:hover {
   color: red;
   width: 50%;
 }
+
+@media screen and (min-width: 768px) {}
