--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
-    gap: 1.2rem;
+    gap: 15px;
     max-width: 100vw;
     margin-left: 5px;
     margin-right: 5px;
@@ -13,23 +13,19 @@
 }
 
 
-
 img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
-
-
 
 .left {
     grid-row: 1 / 3;
 }
 
-
 .datetime{
     background-color: #60C7A2;
     color: white;
-    font-size: 1.3rem;
+    font-size: 4vw;
     border-radius: 10px;
 }
 
@@ -38,14 +34,27 @@ img {
     grid-row: 1 / 3;
 }
 
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 768px) {
     .eventImage {
         width: 100%;
-        height: 60%;
+        height: auto;
+        grid-column: 1 / 3;
     }
 
-    p{
-        font-size: 3.6vw;
+    .right {
+        grid-row: 2;
+        grid-column: 1 / 4;
     }
 
+    .container {
+        grid-template-rows: auto 1fr;
+    }
+
+}
+
+@media screen and (min-width: 1000px) {
+    .datetime {
+        font-size: 40px;
+    }
 }
