--- a/src/styles/RecentlyAddedConcertsComponent.css
+++ b/src/styles/RecentlyAddedConcertsComponent.css
@@ -8,12 +8,18 @@
   gap: 10px;
 }
 
+.child-containers > a{
+    flex-grow: 1;
+    text-decoration: none;
+    height: 100%;
+}
+
 .concertstext {
     color: white;
     text-align:center;
-    text-shadow: 10px red;
-    background-color: black;
+    background: rgba(0,0,0, 0.6);
     font-size: 3vw;
+    margin-top: 0;
 }
 
 .recently-added-concerts-container > h2 {
@@ -24,4 +30,14 @@
 .concert-container {
     width: 100%;
     background-size: cover;
+}
+
+@media screen and (min-width: 1000px) {
+    .concertstext {
+        font-size: 30px;
+    }
+
+    .recently-added-concerts-container > h2 {
+        font-size: 40px;
+    }
 }
