--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -22,7 +22,7 @@ img {
     grid-row: 1 / 3;
 }
 
-.datetime{
+.eventdatetime{
     background-color: #60C7A2;
     color: white;
     font-size: 4vw;
@@ -32,6 +32,9 @@ img {
 .right {
     grid-column: 2 / 4;
     grid-row: 1 / 3;
+}
+
+.livestream-button {
 }
 
 
