--- a/src/styles/FooterComponent.css
+++ b/src/styles/FooterComponent.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #343a40;
     height: 50px;
-    position: fixed; 
+    position:sticky; 
     bottom: 0;
 }
 
