--- a/src/styles/PaymentComponent.css
+++ b/src/styles/PaymentComponent.css
@@ -1,4 +1,4 @@
-.ticketsdiv {
+.payticketsdiv {
     display: grid;
     border: 1px solid black;
     border-radius: 5px;
@@ -7,18 +7,18 @@
     margin-top: -15px;
 }
 
-.event {
+.payevent {
     margin-top: -15px;
 }
 
-h2 {
+.payh2 {
     display: grid;
     justify-content: center;
     margin: 7px;
     margin-bottom: 15px;
 }
 
-.ticketschoice {
+.payticketschoice {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -27,52 +27,57 @@ h2 {
 
 }
 
-.ticketschoice>h3 {
+.payticketschoice>h3 {
     margin-top: 10px;
     margin-bottom: 10px;
 
 }
 
-.numberOfTickets {
+.paynumberOfTickets {
     height: 4vh;
     width: 8vh;
     align-self: center;
     justify-self: end;
 }
 
-.setRight {
+.paysetRight {
     display: grid;
     justify-content: flex-end;
     padding-right: 10px;
 }
 
-.totalPrice {
+.paytotalPrice {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 8vh;
     margin-bottom: 10px;
 }
 
-hr {
+.payhr {
     margin: 0;
-    margin-left: 7px;
-    margin-right: 7px;
+    margin-left: 9px;
+    margin-right: 9px;
     margin-bottom: 10px;
 }
-.btn{
+.paybtn{
     border-radius: 5px;
     margin: 8px;
+    color: white;
+    background-color: #60c7a2;
+    border: 0;
     
     
 }
-.counter{
+.paycounter{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.counter>button{
+.paycounter>button{
     margin: 8px;
+    border-radius: 50%;
+    border: 0;
 }
-.counter>p{
+.paycounter>p{
     justify-self: center;
 }
