--- a/src/styles/LiveStreamComponent.css
+++ b/src/styles/LiveStreamComponent.css
@@ -7,7 +7,7 @@
 }
 
 .livestream-media {
-  background-color: lightgray;
+  /* background-color: lightgray; */
   height: 300px;
   width: 100%;
 }
@@ -17,6 +17,12 @@
   border-radius: 5px;
   margin: 10px;
   padding: 5px;
+}
+
+@media screen and (max-width: 400px) {
+  .livestream-content {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -31,5 +37,6 @@
 
   .livestream-content {
     max-width: 60%;
+    margin-bottom: 20px;
   }
 }
