--- a/src/styles/FooterComponent.css
+++ b/src/styles/FooterComponent.css
@@ -1,50 +1,50 @@
-.Navbar-Footer{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: #343a40;
-    height: 50px;
-    position:sticky; 
+.Navbar-Footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #343a40;
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+}
+
+.Navbar-Footer>button {
+  margin-left: 7vw;
+  margin-right: 7vw;
+  margin-top: 5px;
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: hidden;
+  background-color: #343a40;
+}
+
+.Navbar-Footer>button>a {
+  background-color: #343a40;
+  color: white;
+  display: inline-block;
+}
+
+@media screen and (min-width: 678px) {
+  .Navbar-Footer>button {
+    display: none;
+  }
+
+  .Navbar-Footer {
+    position: absolute;
     bottom: 0;
-}
+    /* margin-top: auto; */
+    padding: 5px 0 10px 0;
+  }
 
-.Navbar-Footer > button{
-    margin-left: 7vw;
-    margin-right: 7vw;
-    margin-top: 5px;
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: hidden;
-    background-color: #343a40;
-}
-
-.Navbar-Footer > button > a{
-    background-color: #343a40;
+  #footer-text {
     color: white;
-    display: inline-block;
+    flex-direction: column;
+  }
 }
 
-@media screen and (min-width: 678px){
-    .Navbar-Footer > button{
-        display: none;
-    }
-
-    .Navbar-Footer{
-        position: absolute;
-        bottom:auto;
-        margin-top: auto;
-        margin-bottom: 10px;
-    }
-
-    p{
-        color:white;
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width: 678px){
-    p{
-        display: none;
-    }
+@media screen and (max-width: 678px) {
+  #footer-text {
+    display: none;
+  }
 }
