--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -22,7 +22,7 @@ img {
     grid-row: 1 / 3;
 }
 
-.eventdatetime{
+.eventDateTime{
     background-color: #60C7A2;
     color: white;
     font-size: 4vw;
@@ -32,9 +32,6 @@ img {
 .right {
     grid-column: 2 / 4;
     grid-row: 1 / 3;
-}
-
-.livestream-button {
 }
 
 
@@ -57,7 +54,7 @@ img {
 }
 
 @media screen and (min-width: 1000px) {
-    .datetime {
+    .eventDateTime {
         font-size: 40px;
     }
 }
