--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -34,6 +34,10 @@ img {
     grid-row: 1 / 3;
 }
 
+.payment {
+    margin-top: 3vh;
+}
+
 
 @media screen and (max-width: 768px) {
     .eventImage {
