--- a/src/styles/TodaysShowsComponent.css
+++ b/src/styles/TodaysShowsComponent.css
@@ -55,3 +55,13 @@
     justify-self: end;
     padding-right: 17px;
 }
+@media screen and (min-width: 380px) {
+    .cinfo>p {
+        font-size: 15px;
+        
+    }
+
+    .recently-added-concerts-container>h2 {
+        font-size: 40px;
+    }
+}
