--- a/src/styles/SearchComponent.css
+++ b/src/styles/SearchComponent.css
@@ -1,5 +1,5 @@
 .search-container {
-  background-color: #60c7a2;
+  /* background-color: #60c7a2; */
   display: flex;
   flex-direction: column;
   align-items: center;
