--- a/src/styles/ProfileComponent.css
+++ b/src/styles/ProfileComponent.css
@@ -4,7 +4,7 @@
     align-items: center;
     font-size:15px;
 }
-h1{
+.profile-h1{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -59,7 +59,7 @@ h1{
     gap:10px;
  
 }
-h2{
+.profile-h2{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -72,6 +72,9 @@ h2{
     display:flex;
     flex-direction: column;
     align-items: flex-start;
+}
+.profile-image{
+    width: 100%;
 }
 @media only screen and (min-width: 760px){
     .profile-page{
@@ -89,7 +92,7 @@ h2{
      border-bottom: 1px;
      margin-top: 2vh;
     }
-    h3{
+    .profile-h3{
         font-size:10px;
     }
     .button-component{
@@ -99,7 +102,7 @@ h2{
     .user-purchaseList{
         border-top:none;
     }
-    .account-label>h2{
+    .account-label>.profile-h2{
        font-size:30px;
     }
     
