--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-main {
+/* main {
   max-width: 1000px;
   margin: auto;
+} */
+.body{
+ min-height: 100vh;
+ display: flex;
+ flex-direction: column;
 }
