--- a/src/styles/FooterComponent.css
+++ b/src/styles/FooterComponent.css
@@ -1,12 +1,12 @@
-
-.Navbar-Footer{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: #343a40;
-    height: 6vh;
-    position:sticky; 
-    bottom: 0;
+.Navbar-Footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #343a40;
+  height: 6vh;
+  position: sticky;
+  bottom: 0;
+  margin-top: auto;
 }
 
 .Navbar-Footer>button {
@@ -32,10 +32,11 @@
   }
 
   .Navbar-Footer {
-    position:sticky;
+    position: sticky;
     bottom: 0;
     /* margin-top: auto; */
     padding: 5px 0 10px 0;
+    margin-top: auto;
   }
 
   #footer-text {
