--- a/src/styles/CalendarComponent.css
+++ b/src/styles/CalendarComponent.css
@@ -6,6 +6,11 @@
   margin-top: 10px;
 }
 
+.calendar-cards > a {
+  text-decoration:none;
+  color: black;
+}
+
 .card {
   display: flex;
   flex-direction: row;
