--- a/src/styles/HeaderComponent.css
+++ b/src/styles/HeaderComponent.css
@@ -1,5 +1,5 @@
 #header {
-  background-color: #343A40;
+  background-color: #343a40;
   display: flex;
   flex-direction: column;
   padding: 2vh;
@@ -30,6 +30,7 @@
 .header-nav-link {
   text-decoration: none;
   color: #60c7a2;
+  cursor: pointer;
 }
 
 .header-bot {
@@ -60,7 +61,7 @@
 
 .account-dropdown-menu {
   display: none;
-  background-color: #343A40;
+  background-color: #343a40;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border: 1px solid #60c7a2;
   border-radius: 3px;
@@ -70,14 +71,13 @@
   position: absolute;
 }
 
-.account-dropdown-menu>div>p {
+.account-dropdown-menu > div > p {
   margin-top: 5px;
   text-transform: uppercase;
   font-size: small;
 }
 
 @media screen and (min-width: 768px) {
-
   .account-dropdown:hover .account-dropdown-menu {
     display: block;
   }
@@ -85,7 +85,7 @@
   #header-search-btn {
     display: block;
     color: #60c7a2;
-    background-color: #343A40;
+    background-color: #343a40;
     border: 1px solid #60c7a2;
     border-radius: 10%;
   }
@@ -99,7 +99,7 @@
     gap: 20px;
   }
 
-  .header-nav-top>Link>a {
+  .header-nav-top > Link > a {
     text-decoration: none;
   }
 
