--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -13,7 +13,7 @@
 }
 
 
-.eventImage, .eventImage > img {
+.event-image, .event-image > img {
     width: 100%;
     height: auto;
 }
@@ -22,7 +22,16 @@
     grid-row: 1 / 3;
 }
 
-.eventDateTime{
+.eventinfo-audio {
+    margin: 10px;
+}
+
+.eventinfo-audio > audio {
+    width: 50vw;
+    margin: 10px;
+}
+
+.event-date-time{
     background-color: #60C7A2;
     color: white;
     font-size: 4vw;
@@ -41,7 +50,7 @@
 
 
 @media screen and (max-width: 768px) {
-    .eventImage {
+    .event-image {
         width: 100%;
         height: auto;
         grid-column: 1 / 3;
@@ -59,7 +68,7 @@
 }
 
 @media screen and (min-width: 1000px) {
-    .eventDateTime {
+    .event-date-time {
         font-size: 40px;
     }
 }
