--- a/src/styles/LiveStreamComponent.css
+++ b/src/styles/LiveStreamComponent.css
@@ -5,12 +5,13 @@
   align-items: center;
   gap: 20px;
   background-color: whitesmoke;
+  max-width: 500px;
 }
 
 .livestream-media>video {
   width: 100%;
   height: auto;
-  padding-top: 10px;
+  /* padding-top: 10px; */
 }
 
 .livestream-content {
@@ -18,6 +19,7 @@
   border-radius: 5px;
   margin: 10px;
   padding: 5px;
+  width: 100%;
 }
 
 @media screen and (max-width: 400px) {
@@ -52,8 +54,8 @@
     margin-top: 20px;
   }
 
-  .livestream-media {
-    /* max-width: 60%; */
+  .livestream-media>video {
+    margin-top: 20px;
   }
 
   .livestream-content {
