--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -1,74 +1,82 @@
-
 .eventcontainer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr;
-    gap: 15px;
-    max-width: 100vw;
-    margin-left: 5px;
-    margin-right: 5px;
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 5px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 15px;
+  max-width: 100vw;
+  margin-left: 5px;
+  margin-right: 5px;
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 5px;
 }
 
 
-.event-image, .event-image > img {
-    width: 100%;
-    height: auto;
+.event-image,
+.event-image>img {
+  width: 100%;
+  height: auto;
 }
 
 .left {
-    grid-row: 1 / 3;
+  grid-row: 1 / 3;
 }
 
 .eventinfo-audio {
-    margin: 10px;
+  margin: 10px;
 }
 
-.eventinfo-audio > audio {
-    width: 50vw;
-    margin: 10px;
+.eventinfo-audio>audio {
+  width: 50vw;
+  margin: 10px;
 }
 
-.event-date-time{
-    background-color: #60C7A2;
-    color: white;
-    font-size: 4vw;
-    border-radius: 10px;
-    text-align: center;
+.event-date-time {
+  background-color: #60C7A2;
+  color: white;
+  font-size: 4vw;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .right {
-    grid-column: 2 / 4;
-    grid-row: 1 / 3;
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
 }
 
 .payment {
-    margin-top: 3vh;
+  margin-top: 3vh;
+}
+
+#event-toggle-modal-btn {
+  margin-top: 10px;
+  color: white;
+  background-color: #60C7A2;
+  border: 0;
+  border-radius: 5px;
 }
 
 
 @media screen and (max-width: 768px) {
-    .event-image {
-        width: 100%;
-        height: auto;
-        grid-column: 1 / 3;
-    }
+  .event-image {
+    width: 100%;
+    height: auto;
+    grid-column: 1 / 3;
+  }
 
-    .right {
-        grid-row: 2;
-        grid-column: 1 / 4;
-    }
+  .right {
+    grid-row: 2;
+    grid-column: 1 / 4;
+  }
 
-    .eventcontainer {
-        grid-template-rows: auto 1fr;
-    }
+  .eventcontainer {
+    grid-template-rows: auto 1fr;
+  }
 
 }
 
 @media screen and (min-width: 1000px) {
-    .event-date-time {
-        font-size: 40px;
-    }
+  .event-date-time {
+    font-size: 40px;
+  }
 }
