--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -6,7 +6,6 @@
   max-width: 100vw;
   margin-left: 5px;
   margin-right: 5px;
-  border: 1px solid black;
   border-radius: 3px;
   padding: 5px;
 }
@@ -24,11 +23,16 @@
 
 .eventinfo-audio {
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .eventinfo-audio>audio {
   width: 50vw;
   margin: 10px;
+  max-width: 500px;
 }
 
 .event-date-time {
@@ -54,6 +58,7 @@
   background-color: #60C7A2;
   border: 0;
   border-radius: 5px;
+  height: 30px;
 }
 
 
@@ -71,6 +76,11 @@
 
   .eventcontainer {
     grid-template-rows: auto 1fr;
+  }
+
+  .eventinfo-audio {
+    flex-wrap: wrap;
+    align-items: center;
   }
 
 }
