--- a/src/styles/ProfileComponent.css
+++ b/src/styles/ProfileComponent.css
@@ -1,24 +1,22 @@
-#register-form>h2 {
+#register-form > h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 15px;
 }
 
-
-.profile-h1{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 10px;
-    }
+.profile-h1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 10px;
+}
 
 .profile-label {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
-
 }
 
 .register-button {
@@ -31,15 +29,13 @@
   padding: 15px 20px 15px 20px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
-
 }
 
-.user-purchaseList {
+.user-purchase-list {
   border-top: 2px solid grey;
 }
 
 .button {
-
   align-self: center;
   margin-top: 10px;
   background-color: #60c7a2;
@@ -49,49 +45,61 @@
   padding: 20px 25px 20px 25px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
-
 }
 
 .button-component {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
-.user-purchaseList {
-
+.user-purchase-list {
   margin: 5px;
 }
 
-.consert-list {
+.concert-list {
   gap: 10px;
-
 }
 
-
-.profile-h2{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 10px;
-    }
+.profile-h2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 10px;
+}
 
 .ticket {
   border: 5px solid gray;
 }
 
-.logout-buttoncomponent {
+.logout-button-component {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-.profile-image{
-    width: 100%;
+.profile-image {
+  width: 100%;
 }
 
+.profile-error {
+  color: #60c7a2;
+  text-align: center;
+  font-size: large;
+  margin-bottom: 2vh;
+}
 
-
+.profile-unauthorized-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font-size: large;
+  margin-top: 20vh;
+}
+.profile-login-link{
+  color: #60c7a2;
+  cursor: pointer;
+}
 
 @media only screen and (min-width: 760px) {
   .profile-page {
@@ -101,7 +109,6 @@
   }
 
   .ticket {
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     border-left: none;
@@ -111,31 +118,23 @@
     margin-top: 2vh;
   }
 
-  
-  .profile-h3{
-        font-size:10px;
-    }
+  .profile-h3 {
+    font-size: 10px;
+  }
 
   .button-component {
     font-size: 10px;
     padding: none;
   }
 
-  .user-purchaseList {
+  .user-purchase-list {
     border-top: none;
   }
 
-  .account-label>h2 {
+  .account-label > h2 {
     font-size: 30px;
   }
-  .profile-h1{
+  .profile-h1 {
     font-size: 30px;
-    
-    
-  }.register-error{
-    margin-left: 15vw;
-    font-size:20px;
   }
-
-
 }
