--- a/src/styles/HeaderComponent.css
+++ b/src/styles/HeaderComponent.css
@@ -51,6 +51,7 @@
   border-radius: 10px;
   background-color: #60c7a2;
   margin-left: 1px;
+  margin-top: 3px;
   /* transform-origin: 1px;
   transition: all 0.3s linear; */
 }
@@ -71,7 +72,7 @@
   position: absolute;
 }
 
-.account-dropdown-menu > div > p {
+.account-dropdown-menu>div>p {
   margin-top: 5px;
   text-transform: uppercase;
   font-size: small;
@@ -99,7 +100,7 @@
     gap: 20px;
   }
 
-  .header-nav-top > Link > a {
+  .header-nav-top>Link>a {
     text-decoration: none;
   }
 
