--- a/src/styles/SearchComponent.css
+++ b/src/styles/SearchComponent.css
@@ -34,6 +34,7 @@
     margin-bottom: 5px;
     padding: 5px;
     border-radius: 5px;
+    margin-bottom: 3vh;
 
 }
 
@@ -46,16 +47,17 @@
 #search-advanced-group {
   display: flex;
   gap: 5px;
+  margin-bottom: -1vh;
 }
 
 #search-filter-boxes {
   display: grid;
   grid-template-columns:1fr 1fr;
-  width: 70vw;
+  width: 35vw;
   align-items: center;
   justify-content: space-between;
   margin-top: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 5vh;
 }
 #search-filter-boxes>:last-child> {
  margin: 0;
@@ -66,6 +68,7 @@
   
   font-size: 16px;
   font-weight: 500;
+  justify-self: center;
   
 }
 
@@ -74,6 +77,7 @@
 }
 
 #search-body-input {
+  
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 15px;
   border: 0px;
@@ -84,6 +88,18 @@
   color: #60c7a2;
   border-radius: 5px;
   padding: 5px;
+}
+.dpdiv {
+
+  display: grid;
+  padding: 3px;
+  margin-bottom: 1vh;
+
+
+}
+
+.dpdiv>:first-child {
+  padding-bottom: 10px;
 }
 
 @media screen and (min-width: 768px) {
