--- a/src/styles/RecentlyAddedConcertsComponent.css
+++ b/src/styles/RecentlyAddedConcertsComponent.css
@@ -32,10 +32,14 @@
   background-size: cover;
 }
 
-#recently-added-wrapper {
+.recently-added-wrapper {
   height: 200px;
   background-size: cover;
   background-position: 50% 50%;
+}
+
+.recently-added-wrapper>a {
+  text-decoration: none;
 }
 
 @media screen and (min-width: 1000px) {
