--- a/src/styles/LiveStreamComponent.css
+++ b/src/styles/LiveStreamComponent.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  background-color: whitesmoke;
   max-width: 500px;
 }
 
@@ -51,7 +50,7 @@
 @media screen and (min-width: 768px) {
   .livestream-container {
     max-width: 1000px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
 
   .livestream-media>video {
@@ -61,5 +60,11 @@
   .livestream-content {
     max-width: 60%;
     margin-bottom: 20px;
+  }
+
+  #livestream-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
