css- fix eventpage

--- a/src/styles/CalendarComponent.css
+++ b/src/styles/CalendarComponent.css
@@ -9,6 +9,7 @@
 .calendar-cards > a {
   text-decoration:none;
   color: black;
+  
 }
 
 .card {
@@ -17,9 +18,9 @@
   justify-content: space-between;
   align-items: center;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 20px;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .date {
   flex: 1;
@@ -51,6 +52,7 @@
     margin-left: 20vw;
     margin-right: 20vw;
     margin-top: 2vh;
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 }
 
