--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -1,7 +1,8 @@
 .eventcontainer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 15px;
   max-width: 100vw;
   margin-left: 5px;
@@ -10,42 +11,51 @@
   padding: 5px;
 }
 
-
-.event-image,
-.event-image>img {
+.event-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.event-image > img {
   width: 100%;
   height: auto;
 }
 
-.left {
-  grid-row: 1 / 3;
-}
+/* .left {
+  grid-row: 2 / 3;
+} */
 
 .eventinfo-audio {
-  margin: 10px;
+  margin-top: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
-.eventinfo-audio>audio {
-  width: 50vw;
-  margin: 10px;
-  max-width: 500px;
+.venue-info-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.venue-info-1 > h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+.venue-info-1 > p {
+  margin-top: 5px;
 }
 
-.event-date-time {
-  background-color: #60C7A2;
-  color: white;
-  font-size: 4vw;
-  border-radius: 10px;
-  text-align: center;
-}
-
-.right {
-  grid-column: 2 / 4;
-  grid-row: 1 / 3;
+.venue-info-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
 }
 
 .payment {
@@ -55,34 +65,49 @@
 #event-toggle-modal-btn {
   margin-top: 10px;
   color: white;
-  background-color: #60C7A2;
+  background-color: #60c7a2;
   border: 0;
   border-radius: 5px;
   height: 30px;
 }
 
+#livestream-button {
+  margin-top: 20px;
+}
+.eventinfo-audio {
+    margin: 5px;
+    margin-top: 20px;
+  }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
+  .event-container-desktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    max-width: 100vw;
+    margin-top: 10px;
+  }
+  .venue-info-1 {
+    margin: 50px;
+  }
   .event-image {
-    width: 100%;
-    height: auto;
-    grid-column: 1 / 3;
-  }
-
-  .right {
-    grid-row: 2;
-    grid-column: 1 / 4;
-  }
-
-  .eventcontainer {
-    grid-template-rows: auto 1fr;
+    margin: 50px;
   }
 
   .eventinfo-audio {
-    flex-wrap: wrap;
-    align-items: center;
+    margin: 5px;
+    margin-top: 20px;
   }
 
+  .venue-info-2 > p {
+    margin-top: 10px;
+  }
+
+  #livestream-button {
+    margin-top: 20px;
+  }
 }
 
 @media screen and (min-width: 1000px) {
