--- a/src/styles/ProfileComponent.css
+++ b/src/styles/ProfileComponent.css
@@ -5,6 +5,15 @@
   font-size: 15px;
 }
 
+.ticket{
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  margin-top: 10px;
+}
+
 .profile-h1 {
   display: flex;
   flex-direction: column;
