--- a/src/styles/LoginFormComponent.css
+++ b/src/styles/LoginFormComponent.css
@@ -21,8 +21,25 @@ label {
   font-family: "Quicksand", sans-serif;
   background-color: #60c7a2;
   border: 1px solid black;
+  color:white;
 }
 
 #login-error {
   color: red;
+}
+.button-navigateToRegister{
+  font-family: "Quicksand", sans-serif;
+  background-color: #60c7a2;
+  border: 1px solid black;
+  margin-top: 2vh;
+  color:white;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+
+
+}
+.register-form{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2vh;
 }
