--- a/src/styles/ProfileComponent.css
+++ b/src/styles/ProfileComponent.css
@@ -5,8 +5,6 @@
   font-size: 15px;
 }
 
-
-
 .profile-h1 {
   display: flex;
   flex-direction: column;
@@ -42,9 +40,9 @@
   margin-top: 10px;
   background-color: #60c7a2;
   border: none;
-  border-radius: 2px;
+  border-radius: 5px;
   color: white;
-  padding: 20px 25px 20px 25px;
+  height: 30px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
 }
@@ -86,9 +84,9 @@
 .profile-image {
   width: 100%;
 }
-.register-error{
+.register-error {
   margin-left: 15vw;
-  font-size:10px;
+  font-size: 10px;
 }
 
 .profile-error {
@@ -106,7 +104,7 @@
   font-size: large;
   margin-top: 20vh;
 }
-.profile-login-link{
+.profile-login-link {
   color: #60c7a2;
   cursor: pointer;
 }
