--- a/src/styles/RegisterComponent.css
+++ b/src/styles/RegisterComponent.css
@@ -1,125 +1,4 @@
-/* .register-line {
-  display: flex;
-  justify-content: center;
-  background-color: lightgray;
-  border-bottom: 3px;
-  border: 10px solid black;
-  margin-bottom: 10vh;
-  height: 15vh;
 
-}
-
-@media only screen and (min-width: 992px) {
-  .register-line {
-    height: 20vh;
-
-  }
-}
-
-
-
-.register-line h1 {
-  color: white;
-  font-size: 20px;
-
-
-}
-
-@media only screen and (min-width: 992px) {
-  .register-line h1 {
-    font-size: 30vh;
-
-  }
-}
-
-
-.register-page {
-  border: 5px solid black;
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-
-}
-
-@media only screen and (min-width: 992px) {
-  .register-page {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(150px, auto);
-
-  }
-}
-
-.label-cor {
-  padding: 20px 0;
-
-}
-
-@media only screen and(min-width:992px) {
-  .label-cor {
-    padding: 25px 0;
-  }
-}
-
-
-button {
-  width: 35vw;
-  height: 10vh;
-  color: white;
-  background-color: green;
-  padding: 20px;
-}
-
-@media only screen and(min-width:992px) {
-  .button {
-    width: 40vw;
-    height: 15vh;
-    padding: 25px;
-  }
-}
-
-.label-text {
-  padding: 5px;
-  size: 20px
-}
-
-button:hover {
-  box-shadow: 1px 3px 5px blue;
-}
-
-@media only screen and (min-width: 992px) {
-  .Image {
-    grid-column: 3/5;
-    grid-row: 1/5;
-
-    background-color: grey;
-
-  }
-}
-
-@media only screen and(min-width:992px) {
-  .forms-grid {
-    grid-column: 1/3;
-    grid-row: 1/5;
-  }
-}
-
-/* .image-register{
-    grid-column: 3/5;
-    grid-row: 1/5;
-    
-    background-color: grey;
-    
-} */
-/* .register-home {
-  width: 100vw;
-  min-height: 100vh;
-}
-
-.register-button {
-  padding: 10px;
-  margin-left: 3vw;
-} */
 
 .register-page {
   display: flex;
@@ -148,18 +27,16 @@ button:hover {
 
 .register-button {
   align-self: center;
-  margin-top: 50px;
+  margin-top: 10px;
   background-color: #60c7a2;
   border: none;
-  border-radius: 2px;
+  border-radius: 5px;
   color: white;
-  padding: 10px 15px 10px 15px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 .label-text {
   font-weight: 1000;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 .register-error {
@@ -169,4 +46,5 @@ button:hover {
   width: 50%;
 }
 
-@media screen and (min-width: 768px) {}
+@media screen and (min-width: 768px) {
+}
