--- a/src/styles/homeComponent.css
+++ b/src/styles/homeComponent.css
@@ -1,9 +1,14 @@
-.main {
+.home-main {
     background-color: black;
 }
 
 .mainpic>img{
     width: 100%;
     height: auto;
+    margin-bottom: 0;
+}
+
+.mainpic{
+    background-color: black;
     margin-bottom: 0;
 }
