--- a/src/styles/UserTicketsToEventComponent.css
+++ b/src/styles/UserTicketsToEventComponent.css
@@ -14,7 +14,8 @@
     justify-content: space-between;
 }
 
-.ticket-info > h2, p {
+.ticket-info > h2,
+.ticket-info > p {
     font-size: 1.3rem;
     margin: 10px;
 }
