--- a/src/styles/LiveStreamComponent.css
+++ b/src/styles/LiveStreamComponent.css
@@ -14,11 +14,25 @@
 }
 
 .livestream-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 5px;
   margin: 10px;
   padding: 5px;
   width: 100%;
+}
+
+.livestream-content > p{
+  margin: 0;
+}
+.livestream-content > h2{
+  margin-bottom: 0;
+}
+.livestream-content > h4{
+  margin-top: 20px;
 }
 
 @media screen and (max-width: 400px) {
