--- a/src/styles/EventComponent.css
+++ b/src/styles/EventComponent.css
@@ -10,7 +10,9 @@
   border-radius: 3px;
   padding: 5px;
 }
-
+.sold-out{
+  color: rgb(249, 67, 67);
+}
 .event-image {
   display: flex;
   flex-direction: column;
