--- a/src/styles/RecentlyAddedConcertsComponent.css
+++ b/src/styles/RecentlyAddedConcertsComponent.css
@@ -43,12 +43,81 @@
   text-decoration: none;
 }
 
-@media screen and (min-width: 1000px) {
-  .concertstext {
-    font-size: 30px;
+@media screen and (min-width: 679px) {
+  .concertArtistDescription {
+    font-size: 40px;
   }
 
   .recently-added-concerts-container>h2 {
     font-size: 40px;
+  }
+
+  .concertDescription{
+    margin-top: 120px;
+    text-align: center;
+  }
+
+  .concertDate{
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .concertArtistDescription {
+    font-size: 40px;
+  }
+
+  .recently-added-concerts-container>h2 {
+    font-size: 40px;
+  }
+
+  .concertDescription{
+    margin-top: 100px;
+    text-align: center;
+  }
+
+  .concertDate{
+    font-size: 8px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1175px) {
+  .concertArtistDescription {
+    font-size: 40px;
+  }
+
+  .recently-added-concerts-container>h2 {
+    font-size: 40px;
+  }
+
+  .concertDescription{
+    margin-top: 55px;
+    text-align: center;
+  }
+
+  .concertDate{
+    font-size: 8px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 678px) {
+  .concertArtistDescription {
+    font-size: 40px;
+  }
+
+  .recently-added-concerts-container>h2 {
+    font-size: 40px;
+  }
+
+  .concertDescription{
+    margin-top: 145px;
+    text-align: center;
+  }
+
+  .concertDate{
+    font-size: 8px;
+    text-align: center;
   }
 }
