--- a/src/styles/LiveStreamComponent.css
+++ b/src/styles/LiveStreamComponent.css
@@ -1,39 +1,41 @@
 .livestream-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 20px;
-  max-width: 500px;
+}
+
+.livestream-media {
+  padding: 2px 15px 0 15px;
+  background-color: lightgrey;
 }
 
 .livestream-media>video {
   width: 100%;
   height: auto;
-  /* padding-top: 10px; */
 }
 
 .livestream-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 5px;
-  margin: 10px;
-  padding: 5px;
+  padding: 15px;
   width: 100%;
+  margin-left: 30px;
 }
 
-.livestream-content > p{
-  margin: 0;
+.livestream-content>h2 {
+  margin-top: 0;
+  margin-bottom: 2px;
 }
-.livestream-content > h2{
-  margin-bottom: 0;
+
+.livestream-title-break {
+  width: 100%;
+  background-color: #343a40;
+  margin-left: 0;
+  align-self: center;
 }
-.livestream-content > h4{
-  margin-top: 20px;
-}
+
 
 @media screen and (max-width: 400px) {
   .livestream-content {
@@ -64,16 +66,31 @@
 @media screen and (min-width: 768px) {
   .livestream-container {
     max-width: 1000px;
-    /* margin-top: 20px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    max-width: 100vw;
+    margin-top: 10px;
+    padding: 0 35px 0 35px;
+    background: rgb(52, 58, 64);
+    background: linear-gradient(308deg, rgba(52, 58, 64, 1) 33%, rgba(96, 199, 162, 0.8916608879880077) 69%);
   }
 
   .livestream-media>video {
     margin-top: 20px;
   }
 
+  .livestream-media {
+    background-color: transparent;
+  }
+
   .livestream-content {
-    max-width: 60%;
-    margin-bottom: 20px;
+    background-color: white;
+    width: 85%;
+    align-self: center;
+    margin: 20px 0 20px 0;
   }
 
   #livestream-main {
