--- a/src/styles/RecentlyAddedConcertsComponent.css
+++ b/src/styles/RecentlyAddedConcertsComponent.css
@@ -9,7 +9,7 @@
   gap: 10px;
 }
 
-.child-containers>a {
+.child-containers > a {
   flex-grow: 1;
   text-decoration: none;
   height: 100%;
@@ -19,11 +19,41 @@
   color: white;
   text-align: center;
   background: rgba(0, 0, 0, 0.6);
+  background-color: black;
+  font-size: 3vw;
+  margin-top: 0;
+  padding: 10px;
+}
+
+.recently-added-headline {
+  color: white;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
   font-size: 3vw;
   margin-top: 0;
 }
+.recently-added-artist {
+  color: white;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+  font-size: 3vw;
+  margin-top: 0;
+}
+.recently-added-venue {
+  color: white;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+  font-size: 2vw;
+}
+.recently-added-date {
+  color: white;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+  font-size: 1vw;
+  margin-top: 0;
+}
 
-.recently-added-concerts-container>h2 {
+.recently-added-concerts-container > h2 {
   font-size: 4vw;
   margin-top: 0;
 }
@@ -39,7 +69,7 @@
   background-position: 50% 50%;
 }
 
-.recently-added-wrapper>a {
+.recently-added-wrapper > a {
   text-decoration: none;
 }
 
@@ -48,16 +78,16 @@
     font-size: 40px;
   }
 
-  .recently-added-concerts-container>h2 {
-    font-size: 40px;
+  .recently-added-concerts-container > h2 {
+    font-size: 20px;
   }
 
-  .concertDescription{
+  .concertDescription {
     margin-top: 120px;
     text-align: center;
   }
 
-  .concertDate{
+  .concertDate {
     text-align: center;
   }
 }
@@ -67,16 +97,16 @@
     font-size: 40px;
   }
 
-  .recently-added-concerts-container>h2 {
+  .recently-added-concerts-container > h2 {
     font-size: 40px;
   }
 
-  .concertDescription{
+  .concertDescription {
     margin-top: 100px;
     text-align: center;
   }
 
-  .concertDate{
+  .concertDate {
     font-size: 8px;
     text-align: center;
   }
@@ -85,18 +115,20 @@
 @media screen and (min-width: 1175px) {
   .concertArtistDescription {
     font-size: 40px;
+    margin-bottom: 100px;
   }
 
-  .recently-added-concerts-container>h2 {
+  .recently-added-concerts-container > h2 {
     font-size: 40px;
   }
 
-  .concertDescription{
+  .concertDescription {
     margin-top: 55px;
     text-align: center;
+    margin-bottom: 5px;
   }
 
-  .concertDate{
+  .concertDate {
     font-size: 8px;
     text-align: center;
   }
@@ -107,16 +139,13 @@
     font-size: 40px;
   }
 
-  .recently-added-concerts-container>h2 {
-    font-size: 40px;
-  }
-
-  .concertDescription{
+  .concertDescription {
     margin-top: 145px;
     text-align: center;
+    margin-bottom: 5px;
   }
 
-  .concertDate{
+  .concertDate {
     font-size: 8px;
     text-align: center;
   }
