--- a/src/styles/SearchComponent.css
+++ b/src/styles/SearchComponent.css
@@ -85,7 +85,9 @@
   font-size: 16px;
   font-weight: 500;
   justify-self: flex-end;
-  margin-right: 2vw;
+  margin-right: 1vw;
+  margin-left: 0px ;
+
 
 }
 
