--- a/src/styles/ProfileComponent.css
+++ b/src/styles/ProfileComponent.css
@@ -57,7 +57,6 @@
   background-color: grey;
 }
 
-
 .user-purchase-list {
   margin: 5px;
 }
@@ -91,16 +90,16 @@
 }
 
 .profile-error {
-  color: #60c7a2;
+  color: #de5454;
   text-align: center;
   font-size: large;
   margin-bottom: 2vh;
 }
-.button-ticket{
+.button-ticket {
   background-color: #60c7a2;
-  color:white;
-  border:none;
- }
+  color: white;
+  border: none;
+}
 
 .profile-unauthorized-page {
   display: flex;
@@ -114,8 +113,15 @@
   color: #60c7a2;
   cursor: pointer;
 }
-
-
+.button-logout {
+  align-self: center;
+  border-radius: 5px;
+  border: none;
+  font-size: 20px;
+  color: white;
+  background-color: rgb(113, 2, 2);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
 @media only screen and (min-width: 760px) {
   .profile-page {
@@ -134,15 +140,10 @@
     background: #fff;
     border: none;
     margin-bottom: 10px;
-
-    
-   
   }
 
   .profile-h3 {
     font-size: 18px;
-    
-   
   }
 
   .button-component {
@@ -159,65 +160,46 @@
   }
   .profile-h1 {
     font-size: 30px;
-
   }
-  .concert-list{
-    margin-top:5vh;
+  .concert-list {
+    margin-top: 5vh;
   }
-  .profile-h2{
-    font-size:17px;
-   
-    
+  .profile-h2 {
+    font-size: 17px;
   }
- #ticketbutton{
-  font-size: 20px;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 1, 0.35) 0px 5px 15px;
+  #ticketbutton {
+    font-size: 20px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 1, 0.35) 0px 5px 15px;
+    cursor: pointer;
+  }
 
-  
+  #ticketbutton:hover {
+    font-size: 250%;
+  }
+  #ticketbutton-expired {
+    font-size: 20px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 1, 0.35) 0px 5px 15px;
+  }
 
- }
- .button-ticket{
-  background-color: #60c7a2;
-  color:white;
-  border:none;
- }
+  .button-ticket {
+    background-color: #60c7a2;
+    color: white;
+    border: none;
+  }
 
- .profile-image{
-  max-height: 190px;
- }
- .button-logout{
-  align-self: center;
-  border-radius:5px;
-  border:none;
-  font-size:20px;
-  
-  color:white;
-  background-color: rgb(113, 2, 2);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
- 
- 
-}
- button.button-logout:hover,
- button.button-logout:active{
-  font-size: 150%;
-  cursor: pointer;
-}
+  .profile-image {
+    max-height: 190px;
+  }
+  .button-logout {
+    align-self: center;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
 
- button.button:hover,
- button.button:active{
-  font-size: 120%;
-  cursor: pointer;
-}
-
-button#ticketbutton:hover,
- button#ticketbutton:active{
-  font-size:250%;
-  cursor: pointer;
-}
-
-
-
-
-
+    color: white;
+    background-color: rgb(113, 2, 2);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
 }
