--- a/src/styles/SearchComponent.css
+++ b/src/styles/SearchComponent.css
@@ -37,6 +37,7 @@
   margin-bottom: 5px;
   padding: 5px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .sortbydatebtn {
@@ -48,7 +49,7 @@
   margin-bottom: 5px;
   padding: 5px;
   border-radius: 5px;
-
+cursor: pointer;
 
 }
 
@@ -99,6 +100,7 @@
 
 .search-checkbox>input {
   border: 0px;
+  cursor: pointer;
 }
 
 #search-body-input {
@@ -119,6 +121,7 @@
   margin-bottom: 8px;
   padding: 5px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .dpdiv {
