--- a/src/styles/ConfirmBuyComponent.css
+++ b/src/styles/ConfirmBuyComponent.css
@@ -4,7 +4,7 @@
   align-items: center;
 }
 
-.cb-loading-container {
+/* .cb-loading-container {
   background-color: #60C7A2;
   padding: 2px 10px 2px 10px;
   margin-top: 50px;
@@ -13,7 +13,7 @@
   border-radius: 5px;
   color: #343a40;
   font-weight: 1000;
-}
+} */
 
 .cb-main {
   margin-left: 5vw;
